testsuite/tests/polykinds/T6021.stderr

T6021.hs:5:22: error:
    Type variable ‘b’ used as a kind
    In the kind ‘b’
    In the instance declaration for ‘Panic (a :: b) b’
